--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^10.2.5",
-    "astro": "^4.7.1"
+    "astro": "^4.7.1",
+    "terser": "^5.31.3"
   }
 }
